--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="bootstrap-3.3.7-dist\css\bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -76,5 +77,7 @@
                                     </div><!-- /.container-fluid -->
                                 </nav>
                                 
+                                  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="bootstrap-3.3.7-dist\js/bootstrap.min.js"></script>
 </body>
 </html>
