--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
                                         <!-- Collect the nav links, forms, and other content for toggling -->
                                         <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1"  >
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li class="active"><a href="abouts.html">About <span class="sr-only">(current)</span></a></li>
+                                            <li class="active"><a href="storia.html">storia <span class="sr-only">(current)</span></a></li>
                                             <li><a href="">Services</a></li>
                                              <li><a href="contatti.html">Contact</a></li>
                                               <li><a href="#">Portfolio</a></li>
                                             <li class="dropdown">
-                                                
                                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="#">Action</a></li>
+                                                <li><a href="storia.html">Storia</a></li>
                                                 <li><a href="#">Another action</a></li>
                                                 <li><a href="#">Something else here</a></li>
                                                 <li role="separator" class="divider"></li>
