--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" >
+     <nav class="navbar navbar-default  navbar-fixed-top" >
                                    
                                         <!-- Brand and toggle get grouped for better mobile display -->
                                         <div class="navbar-header">
@@ -18,14 +18,14 @@
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                       
-                                        <a class="navbar-brand" href="#">Start Bootstrap</a>
+                                        <a class="navbar-brand" href="index.html">CALCIO</a>
                                         </div>
 
                                         <!-- Collect the nav links, forms, and other content for toggling -->
-                                        <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1"  >
+                                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"  >
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li class="active"><a href="storia.html">storia <span class="sr-only">(current)</span></a></li>
-                                            <li><a href="">Services</a></li>
+                                            <li class="active"><a href="storia.html">STORIA <span class="sr-only">(current)</span></a></li>
+                                            <li><a href=""></a></li>
                                              <li><a href="contatti.html">Contact</a></li>
                                               <li><a href="#">Portfolio</a></li>
                                             <li class="dropdown">
