--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                       
-                                        <a class="navbar-brand" href="index.html"><img src="images\palla.png" width="15%"></a>
+                                        <a class="navbar-brand" href="index.html"><img src="images\palla.png" width="15%">CALCIO</a>
                                         </div>
 
                                         <!-- Collect the nav links, forms, and other content for toggling -->
