--- a/storia.html
+++ b/storia.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="bootstrap-3.3.7-dist\css\bootstrap.min.css" rel="stylesheet">
+    <link href="style.css">
 
     <title>Storia</title>
 </head>
