--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                       
-                                        <a class="navbar-brand" href="index.html" ><img src="images\palla.png" width="15%" alt="palla">CALCIO </a>
+                                        <a class="navbar-brand" href="index.html" ><div center><img src="images\palla.png" width="15%" alt="palla">CALCIO </div></a>
                                         </div>
 
                                         <!-- Collect the nav links, forms, and other content for toggling -->
