--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                       
-                                        <a class="navbar-brand" href="index.html" ><div center><img src="images\palla.png" width="15%" alt="palla">CALCIO </div></a>
+                                        <a class="navbar-brand active" href="index.html" ><div center><img src="images\palla.png" width="15%" alt="palla">CALCIO </div></a>
                                         </div>
 
                                         <!-- Collect the nav links, forms, and other content for toggling -->
                                         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1"  >
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li class="active"><a href="storia.html">STORIA <span class="sr-only">(current)</span></a></li>
+                                            <li ><a href="storia.html">STORIA <span class="sr-only">(current)</span></a></li>
                                             <li><a href=""></a></li>
                                              <li><a href="contatti.html">Contact</a></li>
                                               <li><a href="#">Portfolio</a></li>
@@ -76,6 +76,7 @@
                                         </div><!-- /.navbar-collapse -->
                                     </div><!-- /.container-fluid -->
                                 </nav>
+                                <div class="container"
                                 
                                   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="bootstrap-3.3.7-dist\js/bootstrap.min.js"></script>
