--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="bootstrap-3.3.7-dist\css\bootstrap.min.css" rel="stylesheet" >
-    
+    <link href="css\style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
