--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="container"  >                         
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-        
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-        
+        <button>
         <a class="navbar-brand active" href="index.html" ><div center><img src="images\palla.png" width="15%" alt="palla">CALCIO </div></a>
         </div>
 
