--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="bootstrap-3.3.7-dist\css\bootstrap.min.css" rel="stylesheet" >
     <link href="css\style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
      <nav class="navbar navbar-default   navbar-fixed-top" >
