--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-        <button>
+        </button>
         <a class="navbar-brand active" href="index.html" ><div center><img src="images\palla.png" width="15%" alt="palla">CALCIO </div></a>
         </div>
 
